# libmp4tag

./: .hgignore  .hgtags  CMakeLists.txt  ChangeLog.txt  DEVNOTES.txt  LICENSE.txt  Makefile  README.md  README.txt  VERSION.txt  config.h.in  libmp4tag.c  libmp4tag.doxygen  libmp4tag.h  libmp4tag.h.in  libmp4tag.pc.in  libmp4tagint.h  mp4const.c  mp4tagbe.h  mp4tagcli.c  mp4tagfileop.c  mp4tagint.h  mp4tagparse.c  mp4tagutil.c  mp4tagwrite.c  mp4writeutil.c  nodiscard.h  parsemp4.c  tagdef.c
.github/workflows/: libmp4tag-make-cmake.yml  libmp4tag-msys2-pure-cmake.yml  libmp4tag-pure-cmake.yml
dev/: asan.env  cochk.sh  dumpvars.cmake  libmp4tag.html  push.sh  pushdoc.sh  pushweb.sh  test.py  wikiput.sh
man/: libmp4tag.3  mp4tagcli.1
tests/: chkall.sh  chkcovr.sh  cochk.sh
utils/: depcheck.sh
web/: push.sh  pushweb.sh  wikiput.sh
wiki/: ChangeLog.txt  Constants.txt  ErrorCodes.txt  GettingTags.txt  HelperUtilities.txt  Home.txt  Initializing.txt  Introduction.txt  ModifyingTags.txt  Other.txt  PreserveRestore.txt  TagNames.txt  WritingTags.txt
